--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.27.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4",
     "wrangler": "^2.2.1"
