--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "cross-env": "^7.0.3",
     "framer-motion": "^7.6.7",
     "github-calendar": "^2.3.1",
+    "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-pdf": "^7.5.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
     "@remix-run/dev": "^1.7.2",
     "@remix-run/eslint-config": "^1.7.2",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
     "autoprefixer": "^10.4.13",
