--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 node_modules
 
 /.cache
-/functions/\[\[path\]\].js
-/functions/\[\[path\]\].js.map
-/functions/_assets
-/public/build
+/build
 .env
-.dev.vars
 
-/app/styles/tailwind.css
-.DS_Store
+.wrangler
