--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
+  "name": "zackumar.com",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "build": "run-s build:*",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev:remix": "remix watch",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "remix build && run-p \"dev:*\"",
-    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
-    "start": "cross-env NODE_ENV=production npm run dev:wrangler"
+    "build": "remix vite:build",
+    "deploy": "wrangler pages deploy ./build/client",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "wrangler pages dev ./build/client",
+    "typecheck": "tsc",
+    "typegen": "wrangler types"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.0.1",
-    "@remix-run/cloudflare": "^1.7.2",
-    "@remix-run/cloudflare-pages": "^1.7.2",
-    "@remix-run/react": "^1.7.2",
-    "cross-env": "^7.0.3",
-    "framer-motion": "^7.6.7",
-    "github-calendar": "^2.3.1",
+    "@react-pdf/renderer": "^3.4.2",
+    "@remix-run/cloudflare": "^2.8.1",
+    "@remix-run/cloudflare-pages": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "isbot": "^4.1.0",
     "lodash.throttle": "^4.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-pdf": "^7.5.1"
+    "miniflare": "^3.20231030.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.7.2",
-    "@remix-run/eslint-config": "^1.7.2",
+    "@cloudflare/workers-types": "^4.20230518.0",
+    "@remix-run/dev": "^2.8.1",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/react": "^17.0.52",
-    "@types/react-dom": "^17.0.18",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.27.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.19",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.4",
-    "wrangler": "^2.2.1"
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.1.6",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.24.0"
   },
   "engines": {
-    "node": ">=16.13"
+    "node": ">=18.0.0"
   }
 }
