New work section

--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.15",
     "@react-pdf/renderer": "^3.4.2",
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "@sanity/client": "^6.15.9",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/overlays": "^2.3.31",
+    "@sanity/react-loader": "^1.9.6",
+    "groq": "^3.36.4",
     "isbot": "^4.1.0",
     "lodash.throttle": "^4.1.1",
     "miniflare": "^3.20231030.4",
